# citra

src/citra/: CMakeLists.txt  config.cpp  default_ini.h
src/citra/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h
src/citra_qt/: CMakeLists.txt  bootmanager.cpp  bootmanager.h  cheat_gui.cpp  cheatsearch.cpp  cheatsearch.h  cheatsearch.ui  config.cpp  config.h  configure_input.cpp  configure_input.h  keybinding_names.cpp  keybinding_names.h  main.cpp  main.h  main.ui
src/common/: string_util.cpp  string_util.h
src/common/logging/: backend.cpp  log.h
src/core/: CMakeLists.txt  cheat_core.cpp  cheat_core.h  core.cpp  core.h  memory.cpp  memory.h  perf_stats.cpp  perf_stats.h  settings.cpp  settings.h
src/core/frontend/: emu_window.cpp  emu_window.h
src/core/hle/service/hid/: hid.cpp  hid.h
src/core/hle/service/ir/: extra_hid.cpp  ir_user.cpp
src/core/hw/: gpu.cpp  gpu.h
src/input_core/: CMakeLists.txt  input_core.cpp  input_core.h  key_map.cpp  key_map.h
src/input_core/devices/: device.cpp  device.h  gamecontrollerdb.h  keyboard.cpp  keyboard.h  sdl_gamepad.cpp  sdl_gamepad.h  sdl_joystick.cpp  sdl_joystick.h
src/tests/: CMakeLists.txt
src/video_core/: command_processor.cpp
src/video_core/debug_utils/: debug_utils.h
src/video_core/renderer_opengl/: gl_rasterizer.cpp  gl_rasterizer.h  gl_rasterizer_cache.cpp  gl_resource_manager.h  gl_shader_gen.cpp  gl_shader_gen.h  gl_shader_manager.cpp  gl_shader_manager.h  gl_shader_util.cpp  gl_shader_util.h
